   * Fix "changed" signal being sent twice in case of toggle style when check is clicked.
   * elm_plug should call elm_widget_can_focus_set after adding parent class.
   * Now, widget itself is the object which gets mouse_up event for stealing focus from another object. By this change, a widget with scroller interface can change its focus state before mouse_up of hit_rect.

Changes since Elementary 1.7.4:
-------------------------

Fixes:

   * Fix bug where genlist would delete items added during selection callback if a clear was queued
   * Tooltips now correctly set NETWM tooltip window type
   * Fix the naviframe item part text to be set properly.
   * Fix list separator size bug.

Elementary 1.7.4

Changes since Elementary 1.7.3:
-------------------------

Fixes:

   * Fix the naviframe title_set problem that caused the title visible status reset
   * Make sure data is not NULL in elm_interface_scrollable.
   * Correctly handle failure case in _x11_notify_handler_image.
   * Fix missuse of EINA_INLIST_FOREACH in elm_transit.c.
   * Now, dummy object is always smart member of naviframe.
   * Fix the popup that returned invalid action buttons.
   * Fix the naviframe to not have crash even if user deletes the naviframe in the transition finished cb.
   * Fix Don't elm_transit image animation use the image preloading to avoid image flickering.
   * Fix the image to show the image right now if the image preloading is disabled.
   * Fix small memory leak in elm_map error path
   * Fix memory leak in _item_tag_remove of elm_entry.


Elementary 1.7.3

Changes since Elementary 1.7.2:
-------------------------

Fixes:

   * Fix the naviframe to clear the text parts when it's item is deleted.
   * Fix the mapbuf to update it's content correcltly evenif they go outside of the buffer.
   * Fix the naviframe to resize it's items which are inserted.
   * Fix layout when content_set or text_set is executed with NULL part name.