@@ -11,6 +11,7 @@ Fixes:
    * Fix "changed" signal being sent twice in case of toggle style when check is clicked.
    * elm_plug should call elm_widget_can_focus_set after adding parent class.
    * Now, widget itself is the object which gets mouse_up event for stealing focus from another object. By this change, a widget with scroller interface can change its focus state before mouse_up of hit_rect.
+   * Fix index refill bug when autohide disabled.
 
 Changes since Elementary 1.7.4:
 -------------------------
